--- a/week5/edit_admin.html
+++ b/week5/edit_admin.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/all.css">
+    <link rel="stylesheet" href="./css/all.css">
     <script src="https://kit.fontawesome.com/852e75749d.js" crossorigin="anonymous"></script>
 </head>
 <body>
